--- a/DCGAN_Presentation.ipynb
+++ b/DCGAN_Presentation.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# DCGAN Presentation and Workshop\n",
-    "#### By Ovik Das and Benjamin Wakefield\n",
+    "#### By Ovik and Ben\n",
     "![Nebula](https://camo.githubusercontent.com/a83b960f54a8fe5d134904665a489df701f0fb8b31a856155d377fecc9071e83/68747470733a2f2f63646e2e646973636f72646170702e636f6d2f6174746163686d656e74732f3930343536333938393736303036353534312f3932373234353631313134333637313831382f746573745f362e6a7067)  \n",
     "\n",
     "GANs are cool; let's make something cool with them. The GAN in this code generates images of nebulas, but it can really be used to make any kind of image. \n",
